fix: correction du style des scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,23 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 8px;
+  background-color: #e7e7e7;
+  border: 1px solid #cacaca;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 8px;
+  background-color: #646464;
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: #525252;
+  cursor: pointer;
+}
